# ecommerce-utils

./: .env.sample  .gitignore  README.md  Tasks.md  compare_prices.py  csv_to_xlsx.py  ean_to_asin.py  pyproject.toml  translate_names.py
scripts/: active_in_catalog.py  amazon_konus.py  amazon_txt_to_csv.py  combine_translated.py  copy_duplicates.py  csv_to_xlsx.py  ean_to_asin.py  handle_worten_upload_errors.py  search_products.py
scripts/converting/: amazon_to_worten.py  amazon_txt_to_csv.py  shopify_to_amazon.py  to_amazon.py  to_buyer.py  to_shopify.py  to_universal_template.py
scripts/formatting/: amazon_to_worten.py  amazon_txt_to_csv.py  csv_to_xlsx.py  tsv_to_xlsx.py  xlsx_to_tsv.py
scripts/scraping/: get_amazon_product_images.py  get_product_categories.py  get_provider_names.py  scrape_prices_amazon_listing.py  search_products.py  search_products_in_amazon.py  wallapop_product_suggestions.py
scripts/translation/: translate_names.py
scripts/wallapop/: clusterize_shopify_category_type_pairs_no_llm.py  config.py  demand_aggregator.py  extract_shopify.py  ranking_engine.py  scrape_suggestions.py
templates/: TEMU_GENERAL_UPLOAD_TEMPLATE.xlsx  analytical_data.xlsx  miravia_mixed_categories.xlsm  sellerboard_template.xlsx  universal_template.xlsx
templates/miravia/: categories.json  top_categories_with_commission.json
templates/worten/: bricolaje_y_construccion.xlsx  deporte_aire_libre_y_viaje.xlsx  hogar.xlsx  merchandising_&_gifting.xlsx  moda.xlsx  muebles_y_accesorios.xlsx  product_categories.json  productos_de_cuidado_personal.xlsx  smart_home.xlsx  (+3 more)
